IMPROVEMENTS / FIXES
- General:
	- Fixes for post-build event instructions on Windows to allow for different 7zip executables.
	- Downgrade using defaults for missing bulletinfo fields from an error to a warning.
- UI:
	- Updated Chinese localisation thanks to user Marv1n-M.
	- Propagate new localisation strings to non-English localisation files. Seach for commented out entries with value "???".
	- Fix the alignment indicator not showing for dual-mode APS turrets.
- AI / WM:
	- Improvements to the Orbital AI
		- PID control option available, by default is active only during weapon firing, can be toggled to be active always or never active.
		- Add option to set which side of the ship AI will present toward target using roll control (only active when PID is enabled).
		- Improved maneuvering behavior, it is now better at intercepting targets, killing velocity, and prioritizes combat over minor orbital corrections when within combat range.
		- AI will not engage vessels if doing so will put the AI in risk of de-orbiting.
		- Fixed AI repeatedly jumping back and forth between orbit correction and other modes.
		- AI now capable of avoiding collisions with other vessels, debris, and asteroids.
		- AI now properly aims and fires unguided missiles in orbit.
		- AI will automatically move to closer intercept ranges if it is unable to lock missiles after 20s.
- Armor / Hull:
	- Revert invalid HullTypeNum values to that of Aluminium and log a warning.
- Competition:
	- Fix GM culling based on HP remaining to use percentage remaining instead of the raw part count.
	- Add an option to average duplicates in the tournament parser.
	- Fix incorrect parsing of unicode chars in the tournament parser for "wins".
- Game Modes:
	- Added g-force limits game mode for part failure and Kerbal GLOC (note: the pilot AI's g-limiter still doesn't work well).
- Weapons:
	- Missiles: