@@ -464,6 +464,7 @@ Localization
         // Spawn Options
             #LOC_BDArmory_Settings_SpawnOptions = Spawn Options
             #LOC_BDArmory_Settings_SpawnDistanceFactor = Spawning Distance Factor
+            #LOC_BDArmory_Settings_SpawnRefHeading = Reference Heading
             #LOC_BDArmory_Settings_SpawnDistance = Spawning Distance
             #LOC_BDArmory_Settings_SpawnDistanceToggle = Absolute Distance vs Factor
             #LOC_BDArmory_Settings_SpawnReassignTeams = Reassign Teams
