@@ -18,7 +18,6 @@
 	- Formation Flying https://discord.com/channels/720416076571082863/720423078533791854/1260742190418624633
 		- More options for formations
 		- Altitude stagger
-	- Add an initial heading slider for circular spawning.
 	- ? Add an action group trigger to the WM based on the current target being an enemy vessel within a custom distance. - Make it a collapsable section of custom triggers to include other conditions later.
 	- Artillery aiming support
 	- Lift stacking improvements with logical wing segments
